test/testdata/classes/methods/class/duplicate_params_error.lox
// error: duplicate parameter x
// error: duplicate parameter y
class Foo {
  class bar(x, y, z, x, y) {}
}
